tests/core/ill-typed/missing_main/missing-main-1.stella
language core;

fn returnTrue(b : Bool) -> Bool {
  return true
}
fn returnFalse(b : Bool) -> Bool {
  return false
}
